--- a/style.css
+++ b/style.css
@@ -4,6 +4,15 @@ body{
     align-items: center;
 }
 
+StartScreenContainer {
+    
+}
+
+img {
+    width: 100%;  
+    height: auto;
+}
+
 canvas {
     background-color: black;
 }
